--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ spud (0.7-1) lucid; urgency=low
   * Work around innodb bug, see http://south.aeracode.org/ticket/466.
   * Fiddle with stylesheets, etc.
 
- -- Brian May <brian@sys05b>  Tue, 05 Apr 2011 14:57:40 +1000
+ -- Brian May <brian@debian.org>  Tue, 05 Apr 2011 14:57:40 +1000
 
 spud (0.6-1) lucid; urgency=low
 
