--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+spud (0.11-1) unstable; urgency=low
+
+  * Remove whitespace after edit photo command.
+  * New edit form.
+  * Don't hardcode large image size.
+
+ -- Brian May <brian@sys05b>  Tue, 03 May 2011 12:55:49 +1000
+
 spud (0.10-1) unstable; urgency=low
 
   * Remove obsolete command line option to import program.
