--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ spud (0.11-1) unstable; urgency=low
   * Remove whitespace after edit photo command.
   * New edit form.
   * Don't hardcode large image size.
+  * Fix processing of actions.
 
- -- Brian May <bam@debian.org>  Tue, 03 May 2011 12:55:49 +1000
+ -- Brian May <brian@sys05b>  Tue, 03 May 2011 14:25:24 +1000
 
 spud (0.10-1) unstable; urgency=low
 
