--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ spud (0.11-1) unstable; urgency=low
   * Don't hardcode large image size.
   * Fix processing of actions.
 
- -- Brian May <brian@sys05b>  Tue, 03 May 2011 14:25:24 +1000
+ -- Brian May <brian@debian.org>  Tue, 03 May 2011 14:25:24 +1000
 
 spud (0.10-1) unstable; urgency=low
 
