--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ spud (0.11-1) unstable; urgency=low
   * Fix processing of actions.
   * Fix various issues surrounding photo relations.
 
- -- Brian May <brian@debian.org>  Tue, 03 May 2011 14:25:24 +1000
+ -- Brian May <bam@debian.org>  Tue, 03 May 2011 14:25:24 +1000
 
 spud (0.10-1) unstable; urgency=low
 
