--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+spud (0.12-1) unstable; urgency=low
+
+  * Update standards version to 3.9.2.
+  * Fix XHTML Errors.
+  * Split django-webs stuff into separate package.
+
+ -- Brian May <bam@debian.org>  Thu, 23 Jun 2011 11:59:13 +1000
+
 spud (0.11-1) unstable; urgency=low
 
   * Remove whitespace after edit photo command.
