--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+spud (0.20-1) unstable; urgency=low
+
+  * Improve formatting of AJAX lists.
+  * Disable auth checks in AJAX lookups.
+
+ -- Brian May <bam@debian.org>  Thu, 29 Dec 2011 11:01:06 +1100
+
 spud (0.19-1) unstable; urgency=low
 
   * Bug fixes.
