--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+spud (0.24-1) unstable; urgency=low
+
+  * Use Django 1.3 static file support.
+  * Make common commands django management commands.
+  * Small SQL optimizations.
+
+ -- Brian May <bam@debian.org>  Fri, 14 Sep 2012 13:20:29 +1000
+
 spud (0.23-1) unstable; urgency=low
 
   * Bugs fixed.
