--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spud (0.25-1) unstable; urgency=low
+
+  * Fix media issues.
+
+ -- Brian May <bam@debian.org>  Tue, 18 Sep 2012 13:36:50 +1000
+
 spud (0.24-1) unstable; urgency=low
 
   * Use Django 1.3 static file support.
