--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spud (1.0-1) unstable; urgency=low
+
+  * Major rewrite in AJAX/Javascript.
+
+ -- Brian May <bam@debian.org>  Sun, 28 Apr 2013 16:15:46 +1000
+
 spud (0.25-1) unstable; urgency=low
 
   * Fix media issues.
