--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spud (1.9-1) unstable; urgency=low
+
+  * Various updates for video support.
+
+ -- Brian May <bam@debian.org>  Sun, 12 May 2013 16:09:30 +1000
+
 spud (1.8-1) unstable; urgency=low
 
   * Various bug fixes.
