--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+spud (1.10-1) unstable; urgency=low
+
+  * Improvements for video.
+  * Various bug fixes.
+
+ -- Brian May <bam@debian.org>  Wed, 15 May 2013 10:10:03 +1000
+
 spud (1.9-1) unstable; urgency=low
 
   * Various updates for video support.
