--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spud (1.14-1) UNRELEASED; urgency=low
+
+  * Test
+
+ -- Brian May <bam@debian.org>  Fri, 22 Nov 2013 11:56:21 +1100
+
 spud (1.13-1) unstable; urgency=low
 
   * Fix various bugs.
