--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-spud (1.14-1) UNRELEASED; urgency=low
+spud (1.14-1) unstable; urgency=low
 
-  * Test
+  * Python 3 fixes.
+  * Django 1.7 fixes.
 
- -- Brian May <bam@debian.org>  Fri, 22 Nov 2013 11:56:21 +1100
+ -- Brian May <bam@debian.org>  Wed, 05 Nov 2014 16:39:45 +1100
 
 spud (1.13-1) unstable; urgency=low
 
