--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+spud (2.0.0-1) unstable; urgency=medium
+
+  * New release.
+  * Rewritten code with django-rest-framework.
+
+ -- Brian May <bam@debian.org>  Mon, 16 Mar 2015 13:57:24 +1100
+
 spud (1.14-1) unstable; urgency=low
 
   * Python 3 fixes.
