--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+spud (2.0.6-1) UNRELEASED; urgency=medium
+
+  * New upstream version.
+  * Significant changes to TypeScript code.
+
+ -- Brian May <bam@debian.org>  Mon, 27 Mar 2017 08:16:27 +1100
+
 spud (2.0.5-1) unstable; urgency=medium
 
   * New upstream version.
