--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ spud (2.0.6-1) UNRELEASED; urgency=medium
 
   * New upstream version.
   * Significant changes to TypeScript code.
+  * Use python3 instead of python2.
 
  -- Brian May <bam@debian.org>  Mon, 27 Mar 2017 08:16:27 +1100
 
