--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-spud (2.0.6-1) UNRELEASED; urgency=medium
+spud (2.0.6-1) unstable; urgency=medium
 
   * New upstream version.
   * Significant changes to TypeScript code.
   * Use python3 instead of python2.
   * Fix python3 issues in legacy upstream code.
 
- -- Brian May <bam@debian.org>  Mon, 27 Mar 2017 08:16:27 +1100
+ -- Brian May <bam@debian.org>  Mon, 27 Mar 2017 19:16:34 +1100
 
 spud (2.0.5-1) unstable; urgency=medium
 
