--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spud (2.0.7-1) UNRELEASED; urgency=medium
+
+  * New upstream version.
+
+ -- Brian May <bam@debian.org>  Sat, 01 Apr 2017 13:39:38 +1100
+
 spud (2.0.6-2) unstable; urgency=medium
 
   * Depend on python3-cssmin, instead of cssmin.
