--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spud (2.0.8-1) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- Brian May <bam@debian.org>  Mon, 19 Jun 2017 08:28:37 +1000
+
 spud (2.0.7-1) unstable; urgency=medium
 
   * New upstream version.
